Reduce confounding effects in differential analysis
Per inspection of the sacrifice time of day and fasting times we select matching time point groups for DE. Prev default analysis was based on all exercise time points vs. the merged controls.

--- a/pass_1a/metabolomics_data_analysis.Rmd
+++ b/pass_1a/metabolomics_data_analysis.Rmd
@@ -97,10 +97,10 @@ tar_vs_untar_norm_pairs = data.frame(
 )
 # specify time points for pairwise differential analysis
 tp_pairs_for_de = data.frame(
-  tp1 = c(0.0,1.0,4.0,4.0,24.0,7.0),
-  tp1_is_control = c(F,F,F,F,F,F),
-  tp2 = c(0.0,0.0,1.0,7.0,0.0,7.0),
-  tp2_is_control = c(T,F,F,T,T,T)
+  tp1 = c(1.0,4.0,7.0,24.0,7.0,0.0),
+  tp1_is_control = c(F,F,F,F,F,T),
+  tp2 = c(0.0,1.0,4.0,0.0,7.0,7.0),
+  tp2_is_control = c(F,F,F,T,T,T)
 )
 ```
 
